[tool.poetry]
name = "stravaweather"
version = "0.1.0"
description = ""
authors = ["Kevin <kevin_duval@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
